syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package com.zup;

import "google/protobuf/timestamp.proto";

service PixRegistraService {
  rpc cadastraChave (PixRegistraRequest) returns (PixRegistraResponse) {}

}

service PixDeletaService {
  rpc deletaChave (PixDeletaRequest) returns (PixDeletaResponse) {}
}

service PixConsultaService {
  rpc consulta (PixConsultaRequest) returns (PixConsultaResponse) {}
  rpc consultaParaSistemasExternos(PixConsultaPorChaveRequest) returns (PixConsultaResponse){}
  rpc consultaTodasChavesCliente(PixConsultaChavesRequest) returns (PixConsultaChavesResponse){}
}

enum TipoChave{
  DEFAULT = 0;
  EMAIL = 1;
  TELEFONE = 2;
  CPF = 3;
  ALEATORIA = 4;

}



enum TipoConta{
  DEFAULTCONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

message PixDeletaRequest {
  string clientId = 1;
  string  pixId = 3;
}

message PixConsultaRequest {

  string clientId = 1;
  string  pixId = 2;

}

message PixConsultaChavesRequest {

  string clientId = 1;

}

 message PixConsultaPorChaveRequest{
   string chavePix = 1;
 }
message Titular {
  string nome = 1;
  string  cpf = 2;
}

message Conta {
  string nomeInstituicao = 1;
  string  agencia = 2;
  string  numero = 3;
  TipoConta tipoConta = 4;


}

message DetalhesChave {
  string clientId = 1;
  string  pixId = 2;
  TipoChave tipoChave = 3;
  string  valorChave = 4;
  TipoConta tipoConta = 5;
  google.protobuf.Timestamp criadoEm = 6;

}

message PixConsultaResponse {
  string clientId = 6;
  string  pixId = 7;
  TipoChave tipoChave = 1;
  string  valorChave = 2;
  Titular titular = 3;
  Conta conta = 5;
  google.protobuf.Timestamp criadoEm = 4;

}

message PixConsultaChavesResponse {
  repeated DetalhesChave chavesPix = 2;
}

message PixDeletaResponse {
  string pixId = 1;
}

message PixRegistraRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string  valorChave = 3;
  TipoConta tipoConta = 4;
}

message PixRegistraResponse {
  string pixId = 1;
  string clientId = 2;
}